[Windows][Clang] error LNK2001: unresolved external symbol "void * __cdecl JSC::allocateCell<class JSC::JSGenericTypedArrayView<struct JSC::Float32Adaptor> >(class JSC::Heap &,unsigned __int64)" https://bugs.webkit.org/show_bug.cgi?id=203483

Unreviewed build fix for clang-cl builds.

* runtime/JSGenericTypedArrayViewInlines.h: Added #include "JSCellInlines.h".

Canonical link: https://commits.webkit.org/216879@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251652 268f45cc-cd09-0410-ab3c-d52691b4dbfc